--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,11 @@
     <string name="objective_assessment">Objective Assessment</string>
     <string name="due_date">Due Date</string>
     <string name="assessment_name">Assessment Name</string>
+    <string name="start_date_term_start">Start Date: Term Start</string>
+    <string name="end_date_term_end">End Date: Term End</string>
+    <string name="update_assessment">Update Assessment</string>
+    <string name="delete_assessment">Delete Assessment</string>
+    <string name="assessment_due_date">Assessment Due Date</string>
+    <string name="edit">Edit</string>
 
 </resources>
