--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="course_assessments">Course Assessments</string>
     <string name="update_course">Update Course</string>
     <string name="delete_course">Delete Course</string>
+    <string name="assign_to_course">Assign to Course</string>
+    <string name="assign_to_term">Assign to Term</string>
 
 </resources>
